2005-10-13  Jeremy Cribb <jcribb@email.unc.edu>
	* evt.gui.m:  fixed bug where when removing data before a specified time point resulting in offsetting said data into negative time... very bad.

2005-10-10  Jeremy Cribb <jcribb@email.unc.edu>
	* evt_gui.m:  fixed bug in plotting the radial vector.

2005-10-06  Jeremy Cribb <jcribb@email.unc.edu>
	* evt_gui.m:  added drift subration methods: 'linear' for removing the linear drift associated with each bead individually and 'center-of-mass' for removing drift along the center of mass vector. added controls for superimposing magnet log data on top of displacments (not yet fully implemented).  Added controls for displaying displacement data in 'microns' instead of 'pixels.'
	* evt_gui.fig: same.

2005-09-22  Jeremy Cribb <jcribb@email.unc.edu>
	* evt_gui.m: suppressed debug output mistakenly left in code.
	* evt_gui.fig: minor changes in GUI appearance.

2005-09-13  Jeremy Cribb <jcribb@email.unc.edu>
	* evt_gui.fig: hopefully fixed the "GUI doesn't work on lower video resolution" problem.

2005-08-13  Jeremy Cribb <jcribb@email.unc.edu>
	* evt_gui.m: added a 'plot radial displacement' checkbox.
	* evt_gui.fig: same.

2005-08-11  Jeremy Cribb <jcribb@email.unc.edu>
	* evt_gui.m: removed a duplicate function name to get rid of annoying warning messages.

2005-08-10  Jeremy Cribb <jcribb@email.unc.edu>
	* evt_gui.m: added code that plots time using the first time point as zero.  This was done to offset the change made in glui_take, where the recorded timestamps are now in UCT.

2005-07-27  Jeremy Cribb <jcribb@email.unc.edu>
	* evt_gui.m: improved filename/filetype handling.  improved but did not completely fix the plotting update problem (where a deleted point is not removed from a plot until focus is removed from that tracker).

2005-06-16  Jeremy Cribb <jcribb@email.unc.edu>
	* evt_gui.m: improved the way intensity projection images are included in editing video tracking files.
	